<resources>
    <string name="app_name">Musical Structure App - ABND</string>
    <!-- Main Menu Selections -->
    <string name="song_menu">Songs</string>
    <string name="artist_menu">Artists</string>
    <string name="search_menu">Search</string>
    <string name="random_menu">Surprise Me</string>
    <string name="now_playing_menu">Now Playing</string>

    <!-- Artist Biography Page Text -->
    <string name="kasabian_about_text">Kasabian are an English rock band formed in Leicester in 1997.
        The band's original members were vocalist Tom Meighan, guitarist and vocalist Sergio Pizzorno, guitarist Chris Karloff, and bassist Chris Edwards.
        The band's line-up was completed by drummer Ian Matthews in 2004 after a string of session drummers.
        Karloff left the band in 2006 and founded a new band called Black Onassis.
        Jay Mehler joined as touring lead guitarist in 2006.
        Mehler left the band for Liam Gallagher's Beady Eye in 2013, to be replaced by Tim Carter.
        In 2010 and 2014, Kasabian won the Q Awards for 'Best Act in the World Today', while they were also named "Best Live Act" at the 2014 Q Awards and the 2007 and 2018 NME Awards.
        The band's music is often described as "indie rock", but Pizzorno has said he "hates indie bands" and does not feel Kasabian fit into that category.
        Kasabian have released six studio albums – Kasabian (2004), Empire (2006), West Ryder Pauper Lunatic Asylum (2009), Velociraptor! (2011), 48:13 (2014), and For Crying Out Loud (2017).
        The band's music has been described as a mix between The Stone Roses and Primal Scream with the swagger of Oasis.
        Their music has won them several awards and recognition in the media, including a Brit Award in 2010 for Best British Group,
        and their live performances have received praise, the most notable of which was their appearance as headliners at the 2014 Glastonbury Festival.</string>
</resources>
