<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/songs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_menu"/>

    <TextView
        android:id="@+id/artists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artist_menu"/>

    <TextView
        android:id="@+id/random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/random_menu"/>

    <TextView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_menu"/>

    <TextView
        android:id="@+id/playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_playing_menu"/>

</LinearLayout>